--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -129,7 +129,7 @@ const { episodesBySeasons, seasons } = await getEpisodeData();
                 </section>
             ))}
         </div>
-        <hr class="my-8 border-his-hr" />
+        <hr class="mt-16 mb-24 border-his-hr/30" />
         <Testimonial />
         <Footer />
     </div>
